--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,22 @@
 Package: spc
 Title: Statistical Process Control
-Version: 0.1
-Date: 2004-02-12
+Version: 0.2
+Date: 2004-09-30
 Author: Sven Knoth, ...
-Maintainer: Sven Knoth <knoth@euv-ffo.de>
+Maintainer: Sven Knoth <Sven.Knoth@gmx.de>
 Description: Evaluation of control charts by means of
         the zero-state, steady-state ARL (Average Run Length).
         Setting up control charts for given in-control ARL
         and plotting of the related figures. The control charts
         under consideration are one- and two-sided EWMA and
         CUSUM charts for monitoring the mean of normally
-        distributed independent data. Other charts and
+        distributed independent data. Now, the ARL calculation
+        of EWMA-S^2 control charts is added. Moreover,
+        with a further new function so-called tolerance limits
+        factors could be determined.
+        Other charts and
         parameters are in preparation. Further SPC areas will
         be covered as well (sampling plans, capability indices ...).
 Depends: R (>= 1.4.0)
 License: GPL
+Packaged: Sat Sep 30 11:00:50 2006; sven
