--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,21 @@
 Package: spc
 Title: Statistical Process Control
-Version: 0.2.1
-Date: 2007-10-14
+Version: 0.3
+Date: 2009-05-12
 Author: Sven Knoth, ...
 Maintainer: Sven Knoth <Sven.Knoth@gmx.de>
-Description: Evaluation of control charts by means of
-        the zero-state, steady-state ARL (Average Run Length).
-        Setting up control charts for given in-control ARL
-        and plotting of the related figures. The control charts
-        under consideration are one- and two-sided EWMA and
-        CUSUM charts for monitoring the mean of normally
-        distributed independent data. Now, the ARL calculation
-        of EWMA-S^2 control charts is added. 
-        Other charts and
-        parameters are in preparation. Further SPC areas will
-        be covered as well (sampling plans, capability indices ...).
+Description: Evaluation of control charts by means of the zero-state,
+        steady-state ARL (Average Run Length). Setting up control
+        charts for given in-control ARL and plotting of the related
+        figures. The control charts under consideration are one- and
+        two-sided EWMA, CUSUM, and Shiryaev-Roberts schemes for
+        monitoring the mean of normally distributed independent data.
+        Now, the ARL calculation of the same set of schemes under drift
+        are added. Other charts and parameters are in preparation.
+        Further SPC areas will be covered as well (sampling plans,
+        capability indices ...).
 Depends: R (>= 1.4.0)
 License: GPL
-Packaged: 2009-05-13 10:31:57 UTC; hornik
+Packaged: 2009-05-13 06:23:03 UTC; root
+Repository: CRAN
+Date/Publication: 2009-05-13 19:27:20
