--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spc
 Title: Statistical Process Control
-Version: 0.3
-Date: 2009-05-12
+Version: 0.4.0
+Date: 2011-02-28
 Author: Sven Knoth, ...
 Maintainer: Sven Knoth <Sven.Knoth@gmx.de>
 Description: Evaluation of control charts by means of the zero-state,
@@ -16,6 +16,6 @@ Description: Evaluation of control charts by means of the zero-state,
         capability indices ...).
 Depends: R (>= 1.4.0)
 License: GPL
-Packaged: 2009-05-13 06:23:03 UTC; root
+Packaged: 2011-02-28 12:11:35 UTC; knoth
 Repository: CRAN
-Date/Publication: 2009-05-13 19:27:20
+Date/Publication: 2011-02-28 12:52:58
